external-crates/move/crates/move-compiler/tests/move_2024/typing/syntax_methods_args_polymorphic_invalid.exp
error[E04034]: 'syntax' method types differ
  ┌─ tests/move_2024/typing/syntax_methods_args_polymorphic_invalid.move:6:43
  │
6 │     public fun borrow<T,Q>(_s: &S<T>, _j: Q): &T { abort 0 }
  │                                           ^ This index function expects type 'Q'
  ·
9 │     public fun borrow_mut<T,Q>(_s: &mut S<T>, _j: T): &mut T { abort 0 }
  │                                                   - This mutable index function expects type 'T'
  │
  = Index operation non-subject parameter types must match exactly

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_polymorphic_invalid.move:14:33
   │
14 │     public fun borrowA<Q,T>(_s: &A<T>, _j: T): &Q { abort 0 }
   │                          -      ^^^^^ This index function subject has type '&a::invalid::A<T>'
   │                          │       
   │                          Type parameter T appears in position 2 here
15 │     #[syntax(index)]
16 │     public fun borrow_muAt<T,Q>(_s: &mut A<T>, _j: T): &mut T { abort 0 }
   │                            -        --------- This mutable index function subject has type '&mut a::invalid::A<T>'
   │                            │         
   │                            Type parameter T appears in position 1 here
   │
   = Type parameters must be used the same by position, not name
   = These functions must take the same subject type, differing only by mutability

error[E04034]: 'syntax' method types differ
   ┌─ tests/move_2024/typing/syntax_methods_args_polymorphic_invalid.move:14:44
   │
14 │     public fun borrowA<Q,T>(_s: &A<T>, _j: T): &Q { abort 0 }
   │                          -                 ^ This index function expects type 'T'
   │                          │                  
   │                          Type parameter T appears in position 2 here
15 │     #[syntax(index)]
16 │     public fun borrow_muAt<T,Q>(_s: &mut A<T>, _j: T): &mut T { abort 0 }
   │                            -                       - This mutable index function expects type 'T'
   │                            │                        
   │                            Type parameter T appears in position 1 here
   │
   = Type parameters must be used the same by position, not name
   = Index operation non-subject parameter types must match exactly

